Sheets, Gamblers Chest, Progress On Scribe Integration

--- a/public/styles.css
+++ b/public/styles.css
@@ -15,12 +15,13 @@ html {
   flex-wrap: wrap;
 }
 
-#rules {
+#rules,
+#expansions {
   margin-left: 2em;
   margin-bottom: 2em;
 }
 
-#expansions {
+#resources {
   margin-bottom: 6em;
   margin-left: 2em;
 }
